# python-pwm

./: .coveragerc  .env  .f0c2a537bee24e84  .gitignore  .pylintrc  5a8d9f42bf73  Dockerfile  LICENSE  Makefile  README.md  coverage_report.txt  docker-compose.yml  export_0708242156.json  export_CHANGE_ME.json  f0c2a537bee24e84  generate.py  generated_entries.json  import.json  main.py  mypy.ini  one.pylintrc  populate.py  pwm.db  pyproject.toml  requirements.txt  run_main.py  schema.json  test.db  test.json
.github/workflows/: coverage.yml  mypy.yml  pylint.yml  python-cli.yml
documentation/: Bewertung.ods
import_export/: import_generated.json  import_short.json  schema.json
scripts/: generate_imports.py  populate_database.py
src/: config.py  main.py
src/api/: pawned.py  placeholder.py
src/cli/: cli.py
src/controller/: connection.py  insert.py  password.py  retrieve.py  user.py
src/crypto/: aes256.py  fernet.py  hashing.py  key_derivation.py  password_util.py  placeholder.py  placeholder_2.py
src/db/: connection.py  insert.py  placeholder.py  retrieve.py
src/exceptions/: encryption_exception.py  exit_from_textbox_exception.py  import_exception.py  validation_exception.py
src/import_export/: export_data.py  import_data.py  password_dict.py
src/model/: category.py  metadata.py  note.py  password.py  password_information.py  user.py
src/test_module/: placeholder.py
src/tui/: input_validator.py  keys.py  panel.py  password_input_validator.py  popup.py  tui.py  (+3 more)
tests/: test_crypto_hashing.py  test_main.py  test_placeholder.py  test_tui_window.py
(+53 files in other folders)
