[project]
dynamic = ["version"]
name = "python-pwm"
dependencies = [
    "pylint>3.2",
    "coverage>7.6",
    "mypy>1.10",
    "cryptography>42.0",
    "typing_extensions>4.12",
    "mypy-extensions>1.0",
    "build>1.2"
]
requires-python = ">=3.11"
authors = [
{ name = "Simon Blum"},
{ name = "Ruth ?"},
{ name = "Max Rodler"},
]
readme = "README.md"
description = "A password manager written in Python"
license = { file = "LICENSE"}

[project.scripts]
python-pwm = "main:main"


[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"
